parser/src/parser/snapshots/enderpy_python_parser__parser__parser__tests__match_statement-5.snap
---
source: parser/src/parser/parser.rs
description: "match a:\n    case a.b:\n        pass\n    case a:\n        pass\n"
---
Module {
    node: Node {
        start: 0,
        end: 61,
    },
    body: [
        Match(
            Match {
                node: Node {
                    start: 0,
                    end: 61,
                },
                subject: Name(
                    Name {
                        node: Node {
                            start: 6,
                            end: 7,
                        },
                        id: "a",
                    },
                ),
                cases: [
                    MatchCase {
                        node: Node {
                            start: 13,
                            end: 40,
                        },
                        pattern: MatchValue(
                            MatchValue {
                                node: Node {
                                    start: 18,
                                    end: 21,
                                },
                                value: Attribute(
                                    Attribute {
                                        node: Node {
                                            start: 18,
                                            end: 21,
                                        },
                                        value: Name(
                                            Name {
                                                node: Node {
                                                    start: 18,
                                                    end: 17,
                                                },
                                                id: "a",
                                            },
                                        ),
                                        attr: "b",
                                    },
                                ),
                            },
                        ),
                        guard: None,
                        body: [
                            Pass(
                                Pass {
                                    node: Node {
                                        start: 31,
                                        end: 35,
                                    },
                                },
                            ),
                        ],
                    },
                    MatchCase {
                        node: Node {
                            start: 40,
                            end: 61,
                        },
                        pattern: MatchAs(
                            MatchAs {
                                node: Node {
                                    start: 45,
                                    end: 46,
                                },
                                name: Some(
                                    "a",
                                ),
                                pattern: None,
                            },
                        ),
                        guard: None,
                        body: [
                            Pass(
                                Pass {
                                    node: Node {
                                        start: 56,
                                        end: 60,
                                    },
                                },
                            ),
                        ],
                    },
                ],
            },
        ),
    ],
}
