parser/src/parser/snapshots/enderpy_python_parser__parser__parser__tests__one_liners@annotated_assignment.py-3.snap
---
source: parser/src/parser/parser.rs
description: "c: tuple[str, int] = \"1\", 2, "
input_file: parser/test_data/inputs/one_liners/annotated_assignment.py
---
Module {
    node: Node {
        start: 0,
        end: 28,
    },
    body: [
        AnnAssignStatement(
            AnnAssign {
                node: Node {
                    start: 0,
                    end: 28,
                },
                target: Name(
                    Name {
                        node: Node {
                            start: 0,
                            end: 1,
                        },
                        id: "c",
                    },
                ),
                annotation: Subscript(
                    Subscript {
                        node: Node {
                            start: 3,
                            end: 18,
                        },
                        value: Name(
                            Name {
                                node: Node {
                                    start: 3,
                                    end: 8,
                                },
                                id: "tuple",
                            },
                        ),
                        slice: Tuple(
                            Tuple {
                                node: Node {
                                    start: 9,
                                    end: 18,
                                },
                                elements: [
                                    Name(
                                        Name {
                                            node: Node {
                                                start: 9,
                                                end: 12,
                                            },
                                            id: "str",
                                        },
                                    ),
                                    Name(
                                        Name {
                                            node: Node {
                                                start: 14,
                                                end: 17,
                                            },
                                            id: "int",
                                        },
                                    ),
                                ],
                            },
                        ),
                    },
                ),
                value: Some(
                    Tuple(
                        Tuple {
                            node: Node {
                                start: 21,
                                end: 28,
                            },
                            elements: [
                                Constant(
                                    Constant {
                                        node: Node {
                                            start: 21,
                                            end: 24,
                                        },
                                        value: Str(
                                            "1",
                                        ),
                                    },
                                ),
                                Constant(
                                    Constant {
                                        node: Node {
                                            start: 26,
                                            end: 27,
                                        },
                                        value: Int(
                                            "2",
                                        ),
                                    },
                                ),
                            ],
                        },
                    ),
                ),
                simple: true,
            },
        ),
    ],
}
