parser/src/parser/snapshots/enderpy_python_parser__parser__parser__tests__one_liners@annotated_assignment.py-5.snap
---
source: parser/src/parser/parser.rs
description: "e: tuple[int, int]"
input_file: parser/test_data/inputs/one_liners/annotated_assignment.py
---
Module {
    node: Node {
        start: 0,
        end: 18,
    },
    body: [
        AnnAssignStatement(
            AnnAssign {
                node: Node {
                    start: 0,
                    end: 18,
                },
                target: Name(
                    Name {
                        node: Node {
                            start: 0,
                            end: 1,
                        },
                        id: "e",
                    },
                ),
                annotation: Subscript(
                    Subscript {
                        node: Node {
                            start: 3,
                            end: 18,
                        },
                        value: Name(
                            Name {
                                node: Node {
                                    start: 3,
                                    end: 8,
                                },
                                id: "tuple",
                            },
                        ),
                        slice: Tuple(
                            Tuple {
                                node: Node {
                                    start: 9,
                                    end: 18,
                                },
                                elements: [
                                    Name(
                                        Name {
                                            node: Node {
                                                start: 9,
                                                end: 12,
                                            },
                                            id: "int",
                                        },
                                    ),
                                    Name(
                                        Name {
                                            node: Node {
                                                start: 14,
                                                end: 17,
                                            },
                                            id: "int",
                                        },
                                    ),
                                ],
                            },
                        ),
                    },
                ),
                value: None,
                simple: true,
            },
        ),
    ],
}
