parser/src/parser/snapshots/enderpy_python_parser__parser__parser__tests__one_liners@annotated_assignment.py-8.snap
---
source: parser/src/parser/parser.rs
description: ""
input_file: parser/test_data/inputs/one_liners/annotated_assignment.py
---
Module {
    node: Node {
        start: 0,
        end: 0,
    },
    body: [],
}
