parser/src/parser/snapshots/enderpy_python_parser__parser__parser__tests__one_liners@binary_op.py-10.snap
---
source: parser/src/parser/parser.rs
description: 1 & 2
input_file: parser/test_data/inputs/one_liners/binary_op.py
---
Module {
    node: Node {
        start: 0,
        end: 5,
    },
    body: [
        ExpressionStatement(
            BinOp(
                BinOp {
                    node: Node {
                        start: 0,
                        end: 5,
                    },
                    op: BitAnd,
                    left: Constant(
                        Constant {
                            node: Node {
                                start: 0,
                                end: 1,
                            },
                            value: 1,
                        },
                    ),
                    right: Constant(
                        Constant {
                            node: Node {
                                start: 4,
                                end: 5,
                            },
                            value: 2,
                        },
                    ),
                },
            ),
        ),
    ],
}
